# lunch-basel

./: .gitignore  README.md  docker-compose.yml  flake.nix  lunch-basel.nix
backend/: devenv.nix  pyproject.toml
backend/lunchb/: main.py  menu.py  restaurants.py
frontend/: Dockerfile  devenv.nix
frontend/src/app/: page.tsx
lunchb/: Dockerfile  README.md  package.nix  pyproject.toml  result
lunchb/src/lunchb/: main.py  restaurants.py
lunchf/: Dockerfile  devenv.nix  package-lock.json  package.json  package.nix  result
lunchf/src/app/: layout.tsx
