[project]
name = "lunchb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.13.5",
  "flask>=3.1.2",
  "gunicorn>=23.0.0",
  "pypdf>=6.0.0",
  "requests>=2.32.5",
]

[project.scripts]
lunchb = "lunchb.main:main"

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"
